tests/ui/match/match-tag-unary.stderr
error[E0308]: mismatched types
  --> $DIR/match-tag-unary.rs:4:43
   |
LL | fn main() { let x: A = A::A(0); match x { B::B(y) => { } } }
   |                                       -   ^^^^^^^ expected `A`, found `B`
   |                                       |
   |                                       this expression has type `A`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
